# autoscale

./: .env.dev.keys  .env.dev.keys.example  .gitattributes  .gitignore  pyproject.toml  readme.md
apps/local-api/: .env.example  alembic.ini  pyproject.toml
apps/local-api/alembic/: env.py
apps/local-api/alembic/versions/: 001_initial_schema.py
apps/local-api/app/: config.py  database.py  dependencies.py  main.py  models.py
apps/local-api/app/routers/: auth.py  cameras.py  drivers.py  health.py  license.py  terminals.py  weighings.py  workplaces.py  ws.py
apps/local-api/scripts/: generate_keys.py  seed_demo.py  terminal_probe.py
apps/local-api/tests/: test_acceptance.py  test_core.py  test_demo_providers.py  test_keli_terminal_test.py
apps/local-panel/: .env.example
apps/local-panel/config/: autoscale.php
apps/local-panel/routes/: platform.php  web.php
apps/owner-admin/: .env.example
apps/owner-admin/config/: licensing.php
apps/owner-admin/routes/: api.php  platform.php
docs/: 00-reference-analysis.md  01-mvp-scope.md  02-architecture.md  03-licensing.md  04-weighing-workflow.md  05-hardware-drivers.md  06-acceptance.md  07-mvp-acceptance-report.md  08-demo-runbook.md  09-production-roadmap.md  10-demo-freeze.md  11-hardware-validation-plan.md
installer/: README.md
installer/scripts/: open-panel.ps1  restart-api.ps1  support-bundle.ps1
installer/service/: README.md
installer/tray/: README.md
scripts/: demo-smoke.ps1  demo-smoke.sh  dev-bootstrap.ps1  dev-bootstrap.sh  hardware-smoke.sh  start-demo.ps1  stop-demo.ps1
(+42 files in other folders)
